--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,41 @@
-name: Deploy Vite React App
+name: Deploy Portfolio
 
 on:
   push:
     branches:
-      - main  # Change this if your branch is different
+      - main
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: 📂 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: ⚙️ Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Ensure node version is a string
+          node-version: '18'
           cache: 'npm'
 
-      - name: 📦 Install dependencies
-        run: npm ci  # Use npm ci for a clean install
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm install lucide-react @vitejs/plugin-react --save-dev
 
-      - name: 🏗️ Build project
+      - name: Build project
         run: npm run build
+        env:
+          NODE_ENV: production
 
-      - name: 🚀 Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # Deploy to gh-pages branch
-          folder: dist       # Vite's output folder
-          token: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub token for authentication
+          folder: dist
+          branch: gh-pages
+          clean: true
+          single-commit: true
